fixed overflow issue

--- a/apps/ui/src/styles.css
+++ b/apps/ui/src/styles.css
@@ -10,3 +10,14 @@
     height: 0;
     pointer-events: none;
   }
+
+  /* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
